# IIEV-Ultra

./: .gitignore  CHANGELOG.md  README.md  SETUP_DEVELOPMENT.md  TEST_LOGGING_README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pytest.ini  run_tests.py
alembic/: env.py
assets/: README.md
docker/: Dockerfile
docs/: ARCHITECTURE.md  ARCHITECTURE_UPDATE.md  CODE_REVIEW_FIXES.md  DEVELOPMENT.md  README.md  SPRINT0_SUMMARY.md  SPRINT3_READINESS.md  SPRINT4_IMPLEMENTATION.md  SPRINT4_PREPARATION.md  TESTING_GUIDE.md
docs/SPRINT0/: SPRINT0_CODE_REVIEW_FIXES.md
docs/SPRINT2/: SPINT2_XML_MAPPER_IMPLEMENTATION.md  TEST_INFRASTRUCTURE_IMPLEMENTATION.md
scripts/: setup_validation_assets.py
src/: __init__.py  main.py
src/api/: health.py  status.py  upload.py
src/core/: azure_clients.py  config.py
src/db/: models.py  session.py
src/schemas/: canonical_model.py  validation_report.py
src/services/: storage_service.py  storage_service_sync.py
src/services/erp/: desc.md  interface.py  mssql_adapter.py
src/services/extraction/: extractor.py  pdf_util.py  xml_util.py
src/services/mapping/: __init__.py  cii_mapper.py  mapper.py  ubl_mapper.py  xpath_util.py
src/services/validation/: asset_service.py  business_validator.py  calculation_validator.py  kosit_validator.py  xsd_validator.py
src/tasks/: processor.py  worker.py
tests/: README.md  conftest.py
tests/integration/tasks/: test_processor.py
tests/unit/: test_corpus_integration.py
tests/unit/extraction/: test_extractor.py
tests/unit/mapping/: test_mapper.py
tests/unit/validation/: test_calculator_validator.py  test_kosit_validator.py  test_xsd_validator.py
